# neo-planner

./: .gitignore  README.md  result.prof  sim.sh  train.csv
src/planner/: CMakeLists.txt  package.xml
src/planner/action/: Plan.action
src/planner/config/: planner_params.yaml
src/planner/launch/: bringup.launch  demo.launch  manager.launch  manager_config.yaml  manager_exp.launch  manager_test.launch  map_server.launch  map_server_exp.launch  map_server_global.launch  map_server_onboard.launch  planner.launch  planner_config.yaml  planner_config_exp.yaml  planner_config_test.yaml  planner_exp.launch  planner_test.launch  rosbag_viz.launch  tf_server.launch  tracker_manager.launch  tracker_planner.launch
src/planner/models/: multirotor_base.xacro
src/planner/rviz/: framework_comp.rviz  post_map_fpv.rviz  post_map_snapshots.rviz  rviz_config.rviz  rviz_exp.rviz
src/planner/scripts/: ESDF.py  draft.py  draft2.py  drone.py  drone_node.py  enhanced_planner.py  esdf.py  esdf_server.py  esdf_server_node.py  expert_planner.py  expert_planner_demo.py  expert_planner_node.py  general_draft.py  global_planner.py  global_planner_node.py  global_planning.py  manager_node.py  manager_test_node.py  mission_manage.py  nn_planner.py  nn_trainer.py  odom2base_tf.py  onnx2trt.py  planner_test.py  record_planner.py  test.py  tracker_manager_node.py  tracker_planner_node.py  traj_planner.py  traj_planner_demo_node.py  traj_planner_node.py  traj_planner_test_node.py  traj_utils.py  visualizer.py  visualizer_demo_node.py  visualizer_node.py
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: load_map.launch  load_world.launch  map_server.launch  map_server_global.launch  map_server_onboard.launch  octomaptransform.launch  onboard_simulator.launch  px4_utils.launch  run_simulator.launch  sim_empty.launch  sim_global.launch  sim_onboard.launch  tf_server.launch
src/simulator/models/: iris.xacro
src/simulator/rviz/: planner_rviz_config.rviz  plotjuggler_config.xml  rviz_config.rviz
src/simulator/scripts/: generate_worlds.py  generator_config.yaml  loadMapDbOct  odom2base_tf.py  visualizer_node.py
src/simulator/src/: publish_pointcloud.cpp
src/simulator/worlds/: Worlds_description.md  bricks.world  bricks2.world  dyna_world.world  forest.world  forest2.world  generate_worlds.py  my_forest.bt  my_forest.pcd  my_forest.world  my_world.bt  my_world.world  poles.pcd  poles.world  poles2.world  rand_world_10.world  rand_world_12.world  rand_world_14.world  rand_world_15.world  rand_world_16.world  (+4 more)
(+53 files in other folders)
