<?xml version="1.0"?>
<package format="2">
    <name>simulator</name>
    <version>1.0.0</version>
    <description>The simulator package</description>
    <maintainer email="yicheng-chen@outlook.com">Yicheng Chen</maintainer>
    <url type="website">https://github.com/Amos-Chen98/neo-planner</url>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>
